--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,38 +1,34 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
+name: deploy
 
 on:
+  release:
+    types: [push]
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
-  packages: write
+    branches: [main]
+  workflow_dispatch:
 
 
 jobs:
-  build:
-
+  build: 
     runs-on: ubuntu-latest
+    permissions: 
+      contents: read 
+      packages: write
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Checkout 
+      uses: actions/checkout@v3
+      
+    - name: Set up JDK 11 
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: '11' 
+        distribution: 'temurin' 
         
-    - name: Run chmod to make gradlew executable
+    - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
-      
+      shell: bash
+
     - name: Build with Gradle
       run: ./gradlew clean build -x test
+      shell: bash
