--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,10 @@ repositories {
 dependencies {
 
 	implementation 'org.jetbrains:annotations:23.0.0'
+    implementation 'junit:junit:4.13.1'
 
 
-	// Spring Boot Starter
+    // Spring Boot Starter
 	testImplementation ('org.springframework.boot:spring-boot-starter-test')
 
 	// Lombok
@@ -35,6 +36,7 @@ dependencies {
 	runtimeOnly ('mysql:mysql-connector-java')
 	implementation ('org.springframework.boot:spring-boot-starter-jdbc')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('com.h2database:h2')
 
 
 
@@ -48,6 +50,10 @@ dependencies {
 
 	implementation('org.springframework.boot:spring-boot-starter')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+
+	// 빌드할 때 마다 그 시간이 버전에 추가되도록 구성
+	version '1.0.1-SNAPSHOT-' + new Date().format("yyyyMMddHHmmss")
+
 
 
 
